
   * Avoid importing tags as branches in svn-import, now that tags are 
     converted to native Bazaar tags.

  FEATURES

   * svn-import will now remove branches removed in Subversion. 
     (#246243). The --keep option can be specified to keep 
	 branches removed in Subversion around.

   * add --incremental option to bzr-svn for incremental imports.

bzr-svn 0.4.11~rc1	2008-08-08

  CHANGES

   * bzr-svn now comes with its own Python bindings for the Subversion 
     libraries, removing the need for a unreleased version of Subversion and 
     improving performance.

     It does however mean the extensions have to be built. This requires 
     the Subversion development libraries and should be possible by 
     simply running ``make`` from the plugin directory. 

	 This fixes some existing bzr-svn related bugs caused by Python-Subversion:

     * KeyboardInterrupts are now no longer swallowed.  (#242217)

     * Crash bug trying to access sites that use self-signed certificates. 
       (#238529)

     * Username and password prompting will now always work.

   * The "svn+https://..." syntax has been deprecated. It still works in the 
     current release but will be removed in the future. If you are unable to 
	 get a repository to work without the svn+ prefix, please file a bug.

  FEATURES
  
   * Add new "dpush" command that works similar to git-svn's dcommit.

   * Support proper Bazaar tags. (#81102)

   * Set mergeinfo properties when pushing merges. (write part of #131323)

   * Basic (experimental) support for stacked branches. Not very
     efficient at the moment because of certain assumptions in the 
	 stacking implementation.

   * Avoid reopening connections to branch and repository when finding 
     branches. (#243749)

   * Show Subversion revision numbers in log output. (#161830)

   * Extend "bzr help svn".

   * Warn when trying to clone a repository root as a branch. (#244638)

   * Much faster Repository.get_revision_delta(). (#127030)
